# connect4engine

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  connect4engine.sln
.github/workflows/: cmake.yml
connect4engine/: connect4engine.cpp  connect4engine.vcxproj  connect4engine.vcxproj.filters  ia.cpp  ia.h  search_controller.h  tauler.cpp  tauler.h  transposition_table.cpp  transposition_table.h  uci.cpp
engines/: README.md
tests/: README.md  engine_wrapper.py  report.py  run_benchmark.py  run_tournament.py  unit_tests.cpp
tests/datasets/: solved.txt
tests/openings/: balanced_openings.txt
